--- a/controllers/baseview/_update.htm
+++ b/controllers/baseview/_update.htm
@@ -1,3 +1,5 @@
+<?php if (!$this->fatalError): ?>
+
 <?php echo Form::open(['class' => 'layout']) ?>
 <input type="hidden" value="<?php echo $formModel->id; ?>" name="id" />
 <div class="layout-row">
@@ -33,3 +35,8 @@
     </div>
 </div>
 <?php echo Form::close() ?>
+
+<?php else: ?>
+<p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
+<p><a href="<?= Backend::url('samubra/training/'.$controller) ?>" class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
+<?php endif ?>
