--- a/controllers/teachers/create.htm
+++ b/controllers/teachers/create.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('samubra/training/organizations') ?>">发证机构</a></li>
+        <li><a href="<?= Backend::url('samubra/training/teachers') ?>">教师管理</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
