--- a/controllers/teachers/preview.htm
+++ b/controllers/teachers/preview.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('samubra/training/organizations') ?>">发证机构管理</a></li>
+        <li><a href="<?= Backend::url('samubra/training/teachers') ?>">Teachers</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -16,7 +16,7 @@
 <?php endif ?>
 
 <p>
-    <a href="<?= Backend::url('samubra/training/organizations') ?>" class="btn btn-default oc-icon-chevron-left">
+    <a href="<?= Backend::url('samubra/training/teachers') ?>" class="btn btn-default oc-icon-chevron-left">
         <?= e(trans('backend::lang.form.return_to_list')) ?>
     </a>
 </p>
