--- a/controllers/setting/index.htm
+++ b/controllers/setting/index.htm
@@ -2,27 +2,69 @@
     <div class="row">
         <div class="col-md-3 menu-row">
             <div class="header-menu">
-                <?php echo $this->pageTitle;?>
+                基础信息设置
             </div>
             <div class="body-menu">
                 <div class="body-menu-li">
                     <a href="<?php echo Backend::url('samubra/training/categories'); ?>">
-                        培训类别管理
+                        培训类别
                     </a>
                 </div>
                 <div class="body-menu-li">
                     <a href="<?php echo Backend::url('samubra/training/organizations'); ?>">
-                        发证机构管理
+                        发证机构
                     </a>
                 </div>
                 <div class="body-menu-li">
                     <a href="<?php echo Backend::url('samubra/training/teachers'); ?>">
-                        授课教师管理
+                        授课教师
                     </a>
                 </div>
                 <div class="body-menu-li">
                     <a href="<?php echo Backend::url('samubra/training/courses'); ?>">
                         课程管理
+                    </a>
+                </div>
+                <div class="body-menu-li">
+                    <a href="<?php echo Backend::url('samubra/training/status'); ?>">
+                        状态管理
+                    </a>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-md-3 menu-row">
+            <div class="header-menu">
+                培训方案管理
+            </div>
+            <div class="body-menu">
+                <div class="body-menu-li">
+                    <a href="<?php echo Backend::url('samubra/training/plans'); ?>">
+                        培训方案
+                    </a>
+                </div>
+                <div class="body-menu-li">
+                    <a href="<?php echo Backend::url('samubra/training/plancourses'); ?>">
+                        授课计划
+                    </a>
+                </div>
+                <div class="body-menu-li">
+                    <a href="<?php echo Backend::url('samubra/training/certificates'); ?>">
+                        证书管理
+                    </a>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-md-3 menu-row">
+            <div class="header-menu">
+                培训项目管理
+            </div>
+            <div class="body-menu">
+                <div class="body-menu-li">
+                    <a href="<?php echo Backend::url('samubra/training/courses'); ?>">
+                        培训项目
                     </a>
                 </div>
 
