完善申请列表页面

--- a/controllers/setting/index.htm
+++ b/controllers/setting/index.htm
@@ -67,6 +67,11 @@
                         培训项目
                     </a>
                 </div>
+                <div class="body-menu-li">
+                    <a href="<?php echo Backend::url('samubra/training/records'); ?>">
+                        申请记录
+                    </a>
+                </div>
 
             </div>
         </div>
