--- a/controllers/setting/index.htm
+++ b/controllers/setting/index.htm
@@ -72,6 +72,11 @@
                         申请记录
                     </a>
                 </div>
+                <div class="body-menu-li">
+                    <a href="<?php echo Backend::url('samubra/training/projectcourses'); ?>">
+                        日程安排表
+                    </a>
+                </div>
 
             </div>
         </div>
