后台页面细节优化

--- a/controllers/baseview/_list_toolbar.htm
+++ b/controllers/baseview/_list_toolbar.htm
@@ -1,7 +1,7 @@
 <div data-control="toolbar">
     <a href="<?php echo Backend::url('samubra/training/'.$controller.'/create') ?>"
             class="btn btn-primary oc-icon-plus" id="new-<?php echo $controller; ?>">
-        添加
+        添加<?= e($controller_title);?>
     </a>
 
     <?php if ($this->user->hasAccess('samubra.training.delete_'.$controller)): ?>
