--- a/controllers/baseview/_update.htm
+++ b/controllers/baseview/_update.htm
@@ -1,3 +1,10 @@
+<?php Block::put('breadcrumb') ?>
+<ul>
+    <li><a href="<?= Backend::url('samubra/training/'.$controller) ?>"><?= e($controller_title);?></a></li>
+    <li><?= e($this->pageTitle) ?></li>
+</ul>
+<?php Block::endPut() ?>
+
 <?php if (!$this->fatalError): ?>
 
 <?php echo Form::open(['class' => 'layout']) ?>
