--- a/controllers/certificates/preview.htm
+++ b/controllers/certificates/preview.htm
@@ -1,22 +1,1 @@
-<?php Block::put('breadcrumb') ?>
-    <ul>
-        <li><a href="<?= Backend::url('samubra/training/certificates') ?>">Certificates</a></li>
-        <li><?= e($this->pageTitle) ?></li>
-    </ul>
-<?php Block::endPut() ?>
-
-<?php if (!$this->fatalError): ?>
-
-    <div class="form-preview">
-        <?= $this->formRenderPreview() ?>
-    </div>
-
-<?php else: ?>
-    <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-<?php endif ?>
-
-<p>
-    <a href="<?= Backend::url('samubra/training/certificates') ?>" class="btn btn-default oc-icon-chevron-left">
-        <?= e(trans('backend::lang.form.return_to_list')) ?>
-    </a>
-</p>
+<?php echo $this->makePartial('plugins/samubra/training/controllers/baseview/preview') ?>
