--- a/controllers/organizations/_list_toolbar.htm
+++ b/controllers/organizations/_list_toolbar.htm
@@ -1,1 +1,2 @@
-<?php echo $this->makePartial('plugins/samubra/training/controllers/baseview/list_toolbar') ?>
+<?php echo $this->makePartial('plugins/samubra/training/controllers/baseview/list_toolbar',
+['extendsToolbar'=>'plugins/samubra/training/controllers/organizations/extends_toolbar']) ?>
