--- a/controllers/plancourses/_list_toolbar.htm
+++ b/controllers/plancourses/_list_toolbar.htm
@@ -1,17 +1,2 @@
-<div data-control="toolbar">
-            <button
-        class="btn btn-default oc-icon-trash-o"
-        disabled="disabled"
-        onclick="$(this).data('request-data', {
-            checked: $('.control-list').listWidget('getChecked')
-        })"
-        data-request="onDelete"
-        data-request-confirm="<?= e(trans('backend::lang.list.delete_selected_confirm')) ?>"
-        data-trigger-action="enable"
-        data-trigger=".control-list input[type=checkbox]"
-        data-trigger-condition="checked"
-        data-request-success="$(this).prop('disabled', true)"
-        data-stripe-load-indicator>
-        <?= e(trans('backend::lang.list.delete_selected')) ?>
-    </button>
-</div>
+<?php echo $this->makePartial('plugins/samubra/training/controllers/baseview/list_toolbar',
+['extendsToolbar'=>'plugins/samubra/training/controllers/plancourses/extends_toolbar']) ?>
