更改授课方式的显示颜色

--- a/controllers/plancourses/_teaching_form_for_pivot.htm
+++ b/controllers/plancourses/_teaching_form_for_pivot.htm
@@ -4,7 +4,7 @@ if(!empty($value = $record->pivot->teaching_form)){
 <div class="control-balloon-selector">
     <ul>
    <?php foreach($value as $teaching_form){
-        echo '<li class="active">'.
+        echo '<li>'.
             \Samubra\Training\Models\Train::$teachingFormMap[$teaching_form].
             '</li> ';
     }?>
