--- a/controllers/plancourses/preview.htm
+++ b/controllers/plancourses/preview.htm
@@ -100,13 +100,12 @@
 <?php else: ?>
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
 <?php endif ?>
-
 <div class="form-buttons">
     <div class="loading-indicator-container">
-        <a href="<?= Backend::url('samubra/training/plancourses') ?>" class="btn btn-default oc-icon-chevron-left">
+        <a href="<?= Backend::url('samubra/training/'.$controller) ?>" class="btn btn-default oc-icon-chevron-left">
             <?= e(trans('backend::lang.form.return_to_list')) ?>
         </a>
-        <a href="<?= Backend::url('samubra/training/plancourses/update/'.$formModel->id) ?>" class="btn btn-primary oc-icon-pencil-left">
+        <a href="<?= Backend::url('samubra/training/'.$controller.'/update/'.$formModel->id) ?>" class="btn btn-primary oc-icon-pencil-left">
             修改
         </a>
         <span class="btn-text">
