--- a/controllers/plans/preview.htm
+++ b/controllers/plans/preview.htm
@@ -21,7 +21,7 @@
                 <tr><td class="text-right">方案标题：</td><td><?php echo $formModel->title;?></td></tr>
                 <tr><td class="text-right">培训类别：</td><td><?php echo $formModel->category->name;?><?= $formModel->is_retraining ? '复训':'新训';?>(<?php echo $formModel->category->parent->name;?>)</td></tr>
                 <?php if($formModel->is_certificate){?>
-                    <tr><td class="text-right">发证机构：</td><td><?php echo $formModel->organization->name;?></td></tr>
+                    <tr><td class="text-right">发证机构：</td><td><?php echo $formModel->organization->name.'('.$formModel->organization->getCompleteTypeText().')';?></td></tr>
                 <?php }?>
                 <tr><td class="text-right">培训学时：</td><td><?php echo '理论：'.$formModel->theroy_hours.'学时,操作：'.$formModel->operate_hours.'学时';?></td></tr>
                 <tr><td class="text-right">培训地址：</td><td><?php echo $formModel->training_address;?></td></tr>
@@ -89,10 +89,10 @@
 
 <div class="form-buttons">
     <div class="loading-indicator-container">
-        <a href="<?= Backend::url('samubra/training/teachers') ?>" class="btn btn-default oc-icon-chevron-left">
+        <a href="<?= Backend::url('samubra/training/'.$controller) ?>" class="btn btn-default oc-icon-chevron-left">
             <?= e(trans('backend::lang.form.return_to_list')) ?>
         </a>
-        <a href="<?= Backend::url('samubra/training/teachers/update/'.$formModel->id) ?>" class="btn btn-primary oc-icon-pencil-left">
+        <a href="<?= Backend::url('samubra/training/'.$controller.'/update/'.$formModel->id) ?>" class="btn btn-primary oc-icon-pencil-left">
             修改
         </a>
         <span class="btn-text">
