--- a/controllers/certificates/preview.htm
+++ b/controllers/certificates/preview.htm
@@ -1,1 +1,96 @@
-<?php echo $this->makePartial('plugins/samubra/training/controllers/baseview/preview') ?>
+<?php Block::put('breadcrumb') ?>
+<ul>
+    <li><a href="<?= Backend::url('samubra/training/'.$controller) ?>">培训证书</a></li>
+    <li><?= e($this->pageTitle) ?></li>
+</ul>
+<?php Block::endPut() ?>
+
+<?php if (!$this->fatalError): ?>
+<div class="row">
+    <div class="form-preview col-md-4">
+        <div class="control-list">
+            <h3>证书信息</h3>
+            <table class="table data">
+                <thead>
+                <tr>
+                    <th style="width: 130px"><span>名称</span></th>
+                    <th><span>值</span></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr><td class="text-right">自动编号：</td><td><?php echo $formModel->num;?></td></tr>
+                <tr><td class="text-right">证件类型：</td><td><?php echo \Samubra\Training\Models\Train::$idTypeMap[$formModel->id_type];?></td></tr>
+                <tr><td class="text-right">证件号码：</td><td><?php echo $formModel->id_num;?></td></tr>
+                <tr><td class="text-right">发证机构：</td><td><?php echo $formModel->organization->name.'('.$formModel->organization->getCompleteTypeText().')';?></td></tr>
+                <tr><td class="text-right">培训类别：</td><td><?php echo $formModel->category->name.'('.$formModel->category->parent->name.')';?></td></tr>
+
+                <tr><td class="text-right">姓名：</td><td><?= $formModel->name; ?></td></tr>
+                <tr><td class="text-right">联系电话：</td><td><?= $formModel->phone; ?></td></tr>
+                <tr><td class="text-right">联系地址：</td><td><?= $formModel->address; ?></td></tr>
+                <tr><td class="text-right">单位名称：</td><td><?= $formModel->company;?></td></tr>
+                <tr><td class="text-right">文化程度：</td><td><?= \Samubra\Training\Models\Train::$eduTypeMap[$formModel->edu_type];?></td></tr>
+                <tr><td class="text-right">初领证日期：</td><td><?= $formModel->first_get_date;?></td></tr>
+                <tr><td class="text-right">有效期：</td><td><?php echo $formModel->print_date . ' 至 ' . $formModel->invalid_date;?></td></tr>
+                <tr><td class="text-right">应复审日期：</td><td><?php echo $formModel->review_date ;?></td></tr>
+                <tr><td class="text-right">是否有效：</td><td><?= $formModel->active ? '有效':'已失效';?></td></tr>
+                <tr><td class="text-right">创建时间：</td><td><?php echo $formModel->created_at;?></td></tr>
+                <tr><td class="text-right">最后更新时间：</td><td><?php echo $formModel->updated_at;?></td></tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="form-preview col-md-8">
+
+        <div class="control-list">
+            <h3>培训记录</h3>
+            <table class="table data">
+                <thead>
+                <tr>
+                    <th><span>#</span></th>
+                    <th><span>培训项目</span></th>
+                    <th><span>培训时间</span></th>
+                    <th><span>考试成绩</span></th>
+                    <th><span>受理状态</span></th>
+                </tr>
+                </thead>
+                <tbody>
+                <?php if($formModel->records){?>
+                <?php foreach($formModel->records as $key => $record){?>
+                <tr>
+                    <td><?= $key+1 ?></td>
+                    <td><a href="<?= Backend::url('samubra/training/projects/preview/'.$record->project->id)?>"><?php echo $record->project->title;?></a></td>
+                    <td><?php echo $record->project->training_begin_date;?> 至 <?php echo $record->project->training_end_date;?></td>
+                    <td><?php echo $this->makePartial('plugins/samubra/training/controllers/records/lists/is_eligible',
+                        ['record'=>$record,'value'=>$record->is_eligible]) ?></td>
+                    <td><?php echo $record->status->name;?></td>
+                </tr>
+                <?php }?>
+                <?php }else{?>
+                <tr> 没有培训项目</tr>
+                <?php }?>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+</div>
+<?php else: ?>
+<p class="flash-message static error"><?= e($this->fatalError) ?></p>
+<?php endif ?>
+
+<div class="form-buttons">
+    <div class="loading-indicator-container">
+        <a href="<?= Backend::url('samubra/training/'.$controller) ?>" class="btn btn-default oc-icon-chevron-left">
+            <?= e(trans('backend::lang.form.return_to_list')) ?>
+        </a>
+        <a href="<?= Backend::url('samubra/training/'.$controller.'/update/'.$formModel->id) ?>" class="btn btn-primary oc-icon-pencil-left">
+            修改
+        </a>
+        <span class="btn-text">
+            <?php echo e(trans('backend::lang.form.or')) ?>
+            <a href="<?php echo Backend::url('samubra/training/'.$controller) ?>">
+                <?php echo e(trans('backend::lang.form.cancel')) ?>
+            </a>
+        </span>
+    </div>
+</div>
