--- a/controllers/certificates/lists/_list_table.htm
+++ b/controllers/certificates/lists/_list_table.htm
@@ -22,6 +22,6 @@
         <tr><td class="text-right">应复审日期：</td><td><?php echo $formModel->review_date ;?></td></tr>
         <tr><td class="text-right">是否有效：</td><td><?= $formModel->active ? '有效':'已失效';?></td></tr>
         <tr><td class="text-right">创建时间：</td><td><?php echo $formModel->created_at;?></td></tr>
-        <tr><td class="text-right">最后更新时间：</td><td><?php echo $formModel->updated_at;?></td></tr>
+        <tr><td class="text-right">最后更新：</td><td><?php echo $formModel->updated_at;?></td></tr>
         </tbody>
     </table>
