重新布局导航

--- a/controllers/certificates/_extends_toolbar.htm
+++ b/controllers/certificates/_extends_toolbar.htm
@@ -1,6 +1,6 @@
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/plancourses'); ?>">
-    授课计划
+<a class="btn btn-success oc-icon-upload" role="button" href="<?php echo Backend::url('samubra/training/certificates/import'); ?>">
+    导入证书
 </a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/plancourses'); ?>">
-    授课计划
+<a class="btn btn-success oc-icon-download" role="button" href="<?php echo Backend::url('samubra/training/certificates/export'); ?>">
+    导出证书
 </a>
