--- a/controllers/certificates/import.htm
+++ b/controllers/certificates/import.htm
@@ -13,7 +13,7 @@
             class="btn btn-primary">
         开始导入
     </button>
-    <a href="<?php echo Backend::url('samubra/training/'.$controller) ?>" class="btn btn-default">返回列表</a>
+    <a href="<?php echo Backend::url('samubra/training/'.$controller) ?>" class="btn btn-link oc-icon-repeat">返回列表</a>
 </div>
 
 <?= Form::close() ?>
