--- a/controllers/courses/_extends_toolbar.htm
+++ b/controllers/courses/_extends_toolbar.htm
@@ -1,12 +1,6 @@
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/categories'); ?>">
-    培训类别
+<a class="btn btn-success oc-icon-upload" role="button" href="<?php echo Backend::url('samubra/training/courses/import'); ?>">
+    导入课程
 </a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/organizations'); ?>">
-    发证机构
-</a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/teachers'); ?>">
-    授课教师
-</a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/status'); ?>">
-    状态管理
+<a class="btn btn-success oc-icon-download" role="button" href="<?php echo Backend::url('samubra/training/courses/export'); ?>">
+    导出课程
 </a>
