--- a/controllers/plancourses/_extends_toolbar.htm
+++ b/controllers/plancourses/_extends_toolbar.htm
@@ -1,6 +1,6 @@
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/plans'); ?>">
-    培训方案
+<a class="btn btn-success oc-icon-upload" role="button" href="<?php echo Backend::url('samubra/training/plancourses/import'); ?>">
+    导入授课计划
 </a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/certificates'); ?>">
-    证书管理
+<a class="btn btn-success oc-icon-download" role="button" href="<?php echo Backend::url('samubra/training/plancourses/export'); ?>">
+    导出授课计划
 </a>
