--- a/controllers/projectcourses/_extends_toolbar.htm
+++ b/controllers/projectcourses/_extends_toolbar.htm
@@ -1,7 +1,6 @@
-
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/projects'); ?>">
-    培训项目
+<a class="btn btn-success oc-icon-upload" role="button" href="<?php echo Backend::url('samubra/training/projectcourses/import'); ?>">
+    导入日程安排
 </a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/records'); ?>">
-    申请记录
+<a class="btn btn-success oc-icon-download" role="button" href="<?php echo Backend::url('samubra/training/projectcourses/export'); ?>">
+    导出日程安排
 </a>
