--- a/controllers/records/_extends_toolbar.htm
+++ b/controllers/records/_extends_toolbar.htm
@@ -1,7 +1,6 @@
-
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/projects'); ?>">
-    培训项目
+<a class="btn btn-success oc-icon-upload" role="button" href="<?php echo Backend::url('samubra/training/records/import'); ?>">
+    导入申请记录
 </a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/projectcourses'); ?>">
-    日程安排表
+<a class="btn btn-success oc-icon-download" role="button" href="<?php echo Backend::url('samubra/training/records/export'); ?>">
+    导出申请记录
 </a>
