--- a/controllers/teachers/_extends_toolbar.htm
+++ b/controllers/teachers/_extends_toolbar.htm
@@ -1,9 +1,6 @@
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/categories'); ?>">
-    培训类别
+<a class="btn btn-success oc-icon-upload" role="button" href="<?php echo Backend::url('samubra/training/teachers/import'); ?>">
+    导入教师
 </a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/organizations'); ?>">
-    发证机构
-</a>
-<a class="btn btn-success" role="button" href="<?php echo Backend::url('samubra/training/status'); ?>">
-    状态管理
+<a class="btn btn-success oc-icon-download" role="button" href="<?php echo Backend::url('samubra/training/teachers/export'); ?>">
+    导出教师
 </a>
