--- a/controllers/teachers/export.htm
+++ b/controllers/teachers/export.htm
@@ -13,6 +13,7 @@
             class="btn btn-primary">
         Export records
     </button>
+    <a href="<?php echo Backend::url('samubra/training/'.$controller) ?>" class="btn btn-link oc-icon-repeat">返回列表</a>
 </div>
 
 <?= Form::close() ?>
