--- a/controllers/teachers/import.htm
+++ b/controllers/teachers/import.htm
@@ -18,6 +18,7 @@
             class="btn btn-primary">
         开始导入
     </button>
+    <a href="<?php echo Backend::url('samubra/training/'.$controller) ?>" class="btn btn-link oc-icon-repeat">返回列表</a>
 </div>
 
 <?= Form::close() ?>
