完善课程导出和授课教师导出

--- a/controllers/teachers/export.htm
+++ b/controllers/teachers/export.htm
@@ -11,7 +11,7 @@
             data-handler="onExportLoadForm"
             data-keyboard="false"
             class="btn btn-primary">
-        Export records
+        导出教师信息
     </button>
     <a href="<?php echo Backend::url('samubra/training/'.$controller) ?>" class="btn btn-link oc-icon-repeat">返回列表</a>
 </div>
