完成打印申请表格

--- a/controllers/baseview/list/_action.htm
+++ b/controllers/baseview/list/_action.htm
@@ -9,7 +9,7 @@
 </a>
 <?php }?>
 <?php if($showPrintButton){ ?>
-<a href="<?= Backend::url('samubra/training/'.$controller.'/update/'.$record->id)?>" class="btn btn-primary btn-sm oc-icon-print">
+<a href="<?= Backend::url('samubra/training/'.$controller.'/print/'.$record->id)?>" class="btn btn-primary btn-sm oc-icon-print">
     打印
 </a>
 <?php }?>
