proje_courses添加course_id字段，添加List Switch支持

--- a/controllers/plans/list/_category.htm
+++ b/controllers/plans/list/_category.htm
@@ -1,4 +1,4 @@
 <?php echo $record->category->name
             . '('
-            . $record->getIsRetrainingTxt()
+            . $record->is_retraining_text
             . ')';?>
